--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,12 +19,12 @@
         <header class="masthead clearfix">
           <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
           
-          <h1 class="site-description"><a href="{{ site.baseurl }}/">Hi, I'm Barry Clark, a web developer from NYC. I write about web development and how to get hired.</a></h1>
+          <h1 class="site-description"><a href="{{ site.baseurl }}/">Shubham Gupta - PhD Student from IIT-Delhi, Senior Data Scientist in Info edge(Naukri.com)</a></h1>
           
           <nav>
             <a href="{{ site.baseurl }}/about/">About</a>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/web-developer-career-newsletter/">Newsletter</a>
+            <!-- <a href="{{ site.baseurl }}/web-developer-career-newsletter/">Newsletter</a> -->
           </nav>
         </header>
       </div>
