--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -12,7 +12,7 @@
     <meta name="description" content="{{ site.description }}">
     <meta property="og:description" content="{{ site.description }}" />
     {% endif %}
-    <meta name="author" content="Barry Clark" />
+    <meta name="author" content="Shubham Gupta" />
     <meta property="twitter:creator" content="@baznyc" />
     <meta name="twitter:site" content="@baznyc">
     <meta property="twitter:account_id" content="45236980" />
